GOd save me. The overflow issues just won't fix.

--- a/_sass/two-divs.sass
+++ b/_sass/two-divs.sass
@@ -544,3 +544,14 @@
         .behind-box
             h2
                 margin-top: 30px                
+
+@media screen and (max-height:320px) and (max-width:580px)
+    .container
+        .left
+            height: 70vh
+        .right
+            top: 70vh
+            height: 100vh
+        .content
+            .right-content
+                top: 75vh                        
